src/Main/portfolio/portfolio.css
.portfolio {
    background: linear-gradient(var(--bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color));
}

.portfolio h2 {
    margin-bottom: 4rem;
}

.protfolio-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    gap: 1.5rem;
}

.portfolio-box {
    position: relative;
    border-radius: 2rem;
    box-shadow: 0 0 1rem var(--bg-color);
    overflow: hidden;
    display: flex;
    height: 22rem;
}

.portfolio-box img {
    width: 100%;
    height: 100%;
    transition: .5s ease;
}

.portfolio-box:hover img {
    transform: scale(1.1);
}

.portfolio-layer {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(var(--bg-half-opacity), var(--main-half-opacity));
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
    text-align: center;
    padding: 0 2.5rem;
    transform: translateY(100%);
    transition: .5s ease;
}

.portfolio-box:hover .portfolio-layer {
    transform: translateY(0);
}

.portfolio-layer h4 {
    font-size: 2.7rem;
}

.portfolio-layer p {
    font-size: 1.3rem;
    margin: .3rem 0 1rem;
}

.portfolio-links-container {
    display: flex;
    flex-direction: row;
}

.portfolio-layer div a {
    display: flex;
    align-items: center;
    font-weight: bold;
    font-size: 1.2rem;
    background: var(--bg-color);
    border-radius: 5rem;
    padding: .9rem;
    margin: 1rem;
    color: var(--text-color);
}

.portfolio-layer div a svg {
    font-size: 1.8rem;
    margin-right: .4rem;
}

/*RESPONSIVE*/
/*RESPONSIVE*/
/*RESPONSIVE*/
/*RESPONSIVE*/
/*RESPONSIVE*/

/*991px*/
/*991px*/
@media (max-width: 991px){
    .portfolio{
        padding-bottom: 7rem;
    }
}

@media (max-width: 903px) {
    .protfolio-container{
        grid-template-columns: repeat(2, 1fr);
    }
    .portfolio-box {
        height: 99%;
        width: 99%;
    }
}


/*768px*/
/*768px*/
@media (max-width: 768px){
    .portfolio {
        padding: 10.52vh 7% 20vh;
    }
    .portfolio h2{
        margin-bottom: 3rem;
    }

    .protfolio-container{
        grid-template-columns: repeat(2, 1fr);
    }

    .portfolio-layer h4{
        font-size: 1.3rem;
    }

    .portfolio-layer p{
        font-size: .95rem;
    }

    .portfolio-layer a{
        height: 2.5rem;
        width: 2.5rem;
    }

    .portfolio-layer a i{
        font-size: 1.4rem;
    }
}

/*617px*/
/*617px*/
@media (max-width: 617px){
    .portfolio{
    padding: 10.52vh 10%;
    }
    .protfolio-container{
        grid-template-columns: 1fr;
    }

    .portfolio-layer a{
        height: 3.5rem;
        width: 3.5rem;
    }

    .portfolio-layer a i{
        font-size: 1.9rem;
    }
}

